...
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
                                            <outlet property="cellImage" destination="UHT-CC-7rY" id="m9i-Vu-M30"/>
                                            <outlet property="dateLabel" destination="zZ7-qv-kLf" id="v4s-uC-ojU"/>
                                            <outlet property="likeButton" destination="sdE-8c-JJO" id="qI9-Lz-Dgp"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="iLa-Sj-bRa"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="V8N-x6-rWW"/>
...
                                    <constraint firstAttribute="width" constant="60" id="pPM-aW-CxH"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Akb-6I-JtH" userLabel="Войти">
                                <rect key="frame" x="16" y="690" width="382" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="SFt-lP-sZU"/>
                                </constraints>
                                <color key="tintColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
...
                                <rect key="frame" x="0.0" y="88" width="414" height="4"/>
                                <color key="tintColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="0.24705882352941178" colorSpace="calibratedRGB"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="kTr-xw-1tP"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstAttribute="bottom" secondItem="kZf-IX-zFW" secondAttribute="bottom" id="130-Ny-mQQ"/>
                            <constraint firstItem="LcI-Om-aDt" firstAttribute="leading" secondItem="kTr-xw-1tP" secondAttribute="leading" id="ELU-cB-GA6"/>
                            <constraint firstItem="kZf-IX-zFW" firstAttribute="leading" secondItem="mrX-gd-jz9" secondAttribute="leading" id="JZv-db-K87"/>
...
